# OtoReport

./: LICENSE  index.html  package-lock.json  package.json  project.md  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
.github/workflows/: build-linux.yml  build-windows.yml
scripts/: build-dev.sh  build-linux.sh  setup-dev.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: contribute.rs  export.rs  findings_cache.rs  images.rs  mod.rs  patients.rs  reports.rs  workspace.rs
src-tauri/src/storage/: file_manager.rs  json_store.rs  mod.rs
src/components/: KonamiEasterEgg.tsx
src/components/annotation/: AnnotationToolbar.tsx  ImageAnnotator.tsx  RotationControl.tsx  SymbolStamps.tsx
src/components/capture/: CameraCapture.tsx  DeviceSelector.tsx  ImageActions.tsx  PhotoGallery.tsx  PhotoPreview.tsx
src/components/export/: PdfReport.tsx
src/hooks/: useAnnotation.ts  useCamera.ts  useEarImages.ts  usePatients.ts  useReports.ts  useTheme.tsx  useWorkspace.ts
src/i18n/: config.ts
src/lib/: annotation-renderer.ts  diagram-renderer.ts  filesystem.ts  findings-cache.ts  findings-library.ts  paths.ts  platform.ts  utils.ts
src/pages/: ContributeFinding.tsx  Dashboard.tsx  FindingsLibrary.tsx  NewReport.tsx  PatientDetail.tsx  Patients.tsx  ReportHistory.tsx  Settings.tsx
src/types/: annotation.ts  findings.ts  image.ts  index.ts  patient.ts  report.ts
(+31 files in other folders)
